Fixed travis database credentialS

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_script:
         - composer self-update
         - composer install --prefer-source
         - mysql -u root < ./tests/data/database.sql
+        - rm ./tests/data/config.neon
+        - cp ./tests/data/config.travis.neon ./tests/data/config.neon
