--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ php:
 script: "./tests/run-test.sh"
 
 env:
-        DB=mysql
-        DB=pgsql
-        DB=sqlite
+        - DB=mysql
+        - DB=pgsql
+        - DB=sqlite
 
 before_script:
         - composer self-update
@@ -18,3 +18,4 @@ before_script:
         - mysql -u root < ./tests/data/database.sql
         - rm ./tests/data/config.neon
         - cp ./tests/data/config.travis.$DB.neon ./tests/data/config.neon
+        - echo $DB
